--- a/mei/app/globals.css
+++ b/mei/app/globals.css
@@ -54,9 +54,18 @@
   -webkit-backdrop-filter: blur(8px);
 }
 
+
+.str-video{
+  --str-video__button-primary-base: #E96962;
+  --str-video__button-default-disabled: #E96962;
+  --str-video__button-default-base: #E96962;
+}
+
+.str-video__call-controls__button, .str-video__menu-toggle-button{
+  background-color: #E96962;
+}
+
 /* ==== clerk class override ===== */
-
-
 .cl-userButtonPopoverActionButtonIcon {
   color: white;
 }
