--- a/mei/app/globals.css
+++ b/mei/app/globals.css
@@ -54,9 +54,8 @@
   -webkit-backdrop-filter: blur(8px);
 }
 
-
-.str-video{
-  --str-video__button-primary-base: #E96962;
+.str-video__call-controls__button, .str-video__menu-toggle-button{
+  background-color: #E96962;
 }
 
 
